--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aws-sdk/client-sesv2": "^3.950.0",
     "@google/genai": "^1.33.0",
+    "@langchain/openai": "^1.2.3",
     "@supabase/supabase-js": "^2.91.0",
     "axios": "^1.6.0",
     "bcryptjs": "^3.0.3",
